# AnA_sunrin_festivities

./: CMakeLists.txt  README.md  game  main.c  pro  slot  slot_machine
